fix 404 overflow

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -5,7 +5,11 @@
 
 // TODO keep only used fonts
 @import url('https://fonts.googleapis.com/css2?family=Monda:wght@400;700&family=Montserrat:wght@300;400;500;700&family=Roboto+Condensed:wght@300;400;700&family=Rubik:wght@300;400;500;700&family=Ubuntu:wght@300&family=Fira+Code:wght@300;500;700&display=swap');
+html {
+	overflow-x: hidden;
+}
 body {
+	overflow-x: hidden;
 	// font-family: 'Roboto Condensed', sans-serif;
 	// font-family: 'Ubuntu', sans-serif;
 	background-color: #111827;
